--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
         <figure>
             <img src="/home/steph/Downloads/To enter Christini's is to enter Italy_.jpeg"
-            alt="An amazing display of a plate of pasta" height="400" width="600">
+             height="400" width="600">
         </figure>
         <section>
             <h2>Instructions</h2>
