--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </section>
         <figure>
-            <img src="/To enter Christini's is to enter Italy_.jpeg"
+            <img src="To enter Christini's is to enter Italy_.jpeg"
              height="400" width="600">
         </figure>
         <section>
